force-app/main/default/objects/service_provider_config__mdt/service_provider_config__mdt.object-meta.xml
<CustomObject>
    <label>service provider config</label>
    <pluralLabel>services provider config</pluralLabel>
</CustomObject>