force-app/main/default/objects/service_provider_config__mdt/fields/class_name__c.field-meta.xml
<CustomField>
    <fullName>class_name__c</fullName>
    <description>class name</description>
    <label>class_name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>