force-app/main/default/objects/service_provider_config__mdt/fields/interface_name__c.field-meta.xml
<CustomField>
    <fullName>interface_name__c</fullName>
    <description>interface name</description>
    <label>interface_name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>