force-app/main/default/objects/service_provider_config__mdt/fields/provider__c.field-meta.xml
<CustomField>
    <fullName>provider__c</fullName>
    <description>provider name</description>
    <label>provider</label>
    <length>18</length>
    <type>Text</type>
</CustomField>