force-app/main/default/objects/service_provider_config__mdt/fields/service__c.field-meta.xml
<CustomField>
    <fullName>service__c</fullName>
    <description>service name</description>
    <label>service</label>
    <length>18</length>
    <type>Text</type>
</CustomField>